@@ -19,6 +19,7 @@ package co.rsk.peg;
 
 import static co.rsk.peg.PegTestUtils.createFederation;
 import static co.rsk.peg.federation.FederationTestUtils.REGTEST_FEDERATION_PRIVATE_KEYS;
+import static org.ethereum.util.ByteUtil.EMPTY_BYTE_ARRAY;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
@@ -71,7 +72,6 @@ import java.nio.file.StandardCopyOption;
 import java.security.*;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.bouncycastle.util.BigIntegers;
 import org.bouncycastle.util.encoders.Hex;
@@ -98,10 +98,6 @@ import org.mockito.invocation.InvocationOnMock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-
-/**
- * Created by ajlopez on 6/9/2016.
- */
 
 @ExtendWith(MockitoExtension.class)
 // to avoid Junit5 unnecessary stub error due to some setup generalizations
@@ -371,7 +367,7 @@ public class BridgeSupportIT {
         CheckpointManager manager = new CheckpointManager(bridgeConstants.getBtcParams(),
             checkpointsStream);
 
-        /**
+        /*
          * Time to use in CheckpointManager adjust checkpoint backwards by a week to account for possible clock drift in the block headers.
          * For more detail please see {@link CheckpointManager#checkpoint(NetworkParameters, InputStream, co.rsk.bitcoinj.store.BtcBlockStore, long)}
          */
@@ -394,7 +390,7 @@ public class BridgeSupportIT {
 
         when(feePerKbSupport.getFeePerKb()).thenReturn(expected);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -446,7 +442,7 @@ public class BridgeSupportIT {
             .withActivations(activationsBeforeForks)
             .build();
 
-        BridgeSupport bridgeSupport = new BridgeSupport(
+        bridgeSupport = new BridgeSupport(
             bridgeRegTestConstants,
             provider,
             mock(BridgeEventLogger.class),
@@ -548,8 +544,6 @@ public class BridgeSupportIT {
 
     @Test
     void callUpdateCollectionsGenerateEventLog() throws IOException {
-        Repository track = createRepository().startTracking();
-
         BlockGenerator blockGenerator = new BlockGenerator();
         List<Block> blocks = blockGenerator.getSimpleBlockChain(blockGenerator.getGenesisBlock(), 10);
         org.ethereum.core.Block rskCurrentBlock = blocks.get(9);
@@ -569,7 +563,7 @@ public class BridgeSupportIT {
             .withActivations(activationsBeforeForks)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -658,7 +652,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(rskCurrentBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(providerForSupport)
             .withRepository(track)
@@ -752,7 +746,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(rskCurrentBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(providerForSupport)
             .withRepository(track)
@@ -845,7 +839,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(rskCurrentBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(providerForSupport)
             .withRepository(track)
@@ -920,7 +914,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(rskCurrentBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1038,7 +1032,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(rskCurrentBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(providerForSupport)
             .withRepository(track)
@@ -1145,7 +1139,7 @@ public class BridgeSupportIT {
                 .withRskExecutionBlock(rskCurrentBlock)
                 .build();
 
-            BridgeSupport bridgeSupport = bridgeSupportBuilder
+            bridgeSupport = bridgeSupportBuilder
                 .withBridgeConstants(bridgeRegTestConstants)
                 .withProvider(provider)
                 .withRepository(track)
@@ -1188,7 +1182,7 @@ public class BridgeSupportIT {
             .withFederationConstants(federationConstants)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1241,7 +1235,7 @@ public class BridgeSupportIT {
             .withFederationConstants(federationConstants)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1311,7 +1305,7 @@ public class BridgeSupportIT {
         tx.sign(new org.ethereum.crypto.ECKey().getPrivKeyBytes());
 
         BridgeStorageProvider provider = new BridgeStorageProvider(track, PrecompiledContracts.BRIDGE_ADDR, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1348,7 +1342,7 @@ public class BridgeSupportIT {
         tx.sign(new org.ethereum.crypto.ECKey().getPrivKeyBytes());
 
         BridgeStorageProvider provider = new BridgeStorageProvider(track, PrecompiledContracts.BRIDGE_ADDR, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1388,7 +1382,7 @@ public class BridgeSupportIT {
 
         track.saveCode(tx.getSender(), new byte[]{0x1});
         BridgeStorageProvider provider = new BridgeStorageProvider(track, PrecompiledContracts.BRIDGE_ADDR, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1412,7 +1406,7 @@ public class BridgeSupportIT {
 
         provider.setHeightBtcTxhashAlreadyProcessed(tx.getHash(), 1L);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1443,7 +1437,7 @@ public class BridgeSupportIT {
         BtcTransaction tx = createTransaction();
         BridgeStorageProvider provider = new BridgeStorageProvider(track, PrecompiledContracts.BRIDGE_ADDR, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1482,7 +1476,7 @@ public class BridgeSupportIT {
         BtcTransaction tx = createTransaction();
         BridgeStorageProvider provider = new BridgeStorageProvider(track, PrecompiledContracts.BRIDGE_ADDR, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1521,7 +1515,7 @@ public class BridgeSupportIT {
         BtcTransaction tx = createTransaction();
         BridgeStorageProvider provider = new BridgeStorageProvider(track, PrecompiledContracts.BRIDGE_ADDR, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1575,7 +1569,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(any(), any(), any(), any())).thenReturn(btcBlockStore);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeConstantsMock)
             .withBtcBlockStoreFactory(mockFactory)
             .build();
@@ -1613,7 +1607,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(track, bridgeRegTestConstants, provider, activations)).thenReturn(btcBlockStore);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1714,7 +1708,7 @@ public class BridgeSupportIT {
             .withFederationStorageProvider(federationStorageProvider)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1772,7 +1766,7 @@ public class BridgeSupportIT {
         List<BtcECKey> activeFederationKeys = Stream.of(
             BtcECKey.fromPrivate(Hex.decode("fa01")),
             BtcECKey.fromPrivate(Hex.decode("fa02"))
-        ).sorted(BtcECKey.PUBKEY_COMPARATOR).collect(Collectors.toList());
+        ).sorted(BtcECKey.PUBKEY_COMPARATOR).toList();
 
         List<FederationMember> activeFederationMembers = FederationTestUtils.getFederationMembersWithBtcKeys(activeFederationKeys);
         FederationArgs activeFedArgs = new FederationArgs(activeFederationMembers,
@@ -1787,7 +1781,7 @@ public class BridgeSupportIT {
         List<BtcECKey> retiringFederationKeys = Stream.of(
             BtcECKey.fromPrivate(Hex.decode("fb01")),
             BtcECKey.fromPrivate(Hex.decode("fb02"))
-        ).sorted(BtcECKey.PUBKEY_COMPARATOR).collect(Collectors.toList());
+        ).sorted(BtcECKey.PUBKEY_COMPARATOR).toList();
 
         List<FederationMember> retiringFederationMembers = FederationTestUtils.getFederationMembersWithBtcKeys(retiringFederationKeys);
         FederationArgs retiringFedArgs = new FederationArgs(retiringFederationMembers,
@@ -1852,7 +1846,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(executionBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1891,7 +1885,7 @@ public class BridgeSupportIT {
         track.commit();
 
         List<UTXO> activeFederationBtcUTXOs = federationStorageProvider.getNewFederationBtcUTXOs(btcParams, activations);
-        List<Coin> activeFederationBtcCoins = activeFederationBtcUTXOs.stream().map(UTXO::getValue).collect(Collectors.toList());
+        List<Coin> activeFederationBtcCoins = activeFederationBtcUTXOs.stream().map(UTXO::getValue).toList();
         assertThat(activeFederationBtcUTXOs, hasSize(1));
         assertThat(activeFederationBtcCoins, hasItem(Coin.COIN));
     }
@@ -1904,7 +1898,7 @@ public class BridgeSupportIT {
             .map(Hex::decode)
             .map(BtcECKey::fromPrivate)
             .sorted(BtcECKey.PUBKEY_COMPARATOR)
-            .collect(Collectors.toList());
+            .toList();
 
         List<FederationMember> activeFederationMembers = FederationTestUtils.getFederationMembersWithBtcKeys(activeFederationKeys);
         FederationArgs activeFedArgs = new FederationArgs(
@@ -1986,7 +1980,7 @@ public class BridgeSupportIT {
             .withActivations(activationsBeforeForks)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withBtcBlockStoreFactory(mockFactory)
             .withExecutionBlock(rskCurrentBlock)
@@ -2096,7 +2090,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(track, bridgeRegTestConstants, provider, activations)).thenReturn(btcBlockStore);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withBtcLockSenderProvider(new BtcLockSenderProvider())
@@ -2177,7 +2171,7 @@ public class BridgeSupportIT {
 
     @Test
     void isBtcTxHashAlreadyProcessed() throws IOException {
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(getBridgeStorageProviderMockWithProcessedHashes())
             .withRepository(null)
@@ -2191,7 +2185,7 @@ public class BridgeSupportIT {
 
     @Test
     void getBtcTxHashProcessedHeight() throws IOException {
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(getBridgeStorageProviderMockWithProcessedHashes())
             .withRepository(null)
@@ -2217,7 +2211,7 @@ public class BridgeSupportIT {
             Stream.iterate(1, i -> i + 1)
                 .limit(6)
                 .map(i -> BtcECKey.fromPrivate(BigInteger.valueOf((i) * 100)))
-                .collect(Collectors.toList())),
+                .toList()),
             Instant.ofEpochMilli(1000),
             0L,
             NetworkParameters.fromID(NetworkParameters.ID_REGTEST)
@@ -2225,7 +2219,7 @@ public class BridgeSupportIT {
         Federation genesisFederation = FederationFactory.buildStandardMultiSigFederation(
             genesisFedArgs
         );
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(true, activeFederation, genesisFederation, null, null, null, null);
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(true, activeFederation, genesisFederation, null, null, null, null);
 
         assertEquals(6, bridgeSupport.getActiveFederationSize().intValue());
         assertEquals(4, bridgeSupport.getActiveFederationThreshold().intValue());
@@ -2271,7 +2265,7 @@ public class BridgeSupportIT {
         Federation genesisFederation = FederationFactory.buildStandardMultiSigFederation(
             genesisFedArgs
         );
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             activeFederation,
             genesisFederation,
@@ -2317,7 +2311,7 @@ public class BridgeSupportIT {
         Block mockedBlock = mock(Block.class);
         when(mockedBlock.getNumber()).thenReturn(26L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             newFederation,
             null,
@@ -2363,7 +2357,7 @@ public class BridgeSupportIT {
         Block mockedBlock = mock(Block.class);
         when(mockedBlock.getNumber()).thenReturn(20L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             newFederation,
             null,
@@ -2388,14 +2382,14 @@ public class BridgeSupportIT {
 
     @Test
     void getRetiringFederationMethods_none() {
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, null, null, null);
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, null, null, null);
 
         assertEquals(-1, bridgeSupport.getRetiringFederationSize().intValue());
         assertEquals(-1, bridgeSupport.getRetiringFederationThreshold().intValue());
-        assertNull(bridgeSupport.getRetiringFederatorBtcPublicKey(0));
-        assertNull(bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.BTC));
-        assertNull(bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.RSK));
-        assertNull(bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.MST));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getRetiringFederatorBtcPublicKey(0));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.BTC));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.RSK));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.MST));
     }
 
     @Test
@@ -2424,7 +2418,7 @@ public class BridgeSupportIT {
         // New federation should not be active in this block
         when(mockedBlock.getNumber()).thenReturn(15L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null, mockedOldFederation,
@@ -2435,10 +2429,10 @@ public class BridgeSupportIT {
 
         assertEquals(-1, bridgeSupport.getRetiringFederationSize().intValue());
         assertEquals(-1, bridgeSupport.getRetiringFederationThreshold().intValue());
-        assertNull(bridgeSupport.getRetiringFederatorBtcPublicKey(0));
-        assertNull(bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.BTC));
-        assertNull(bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.RSK));
-        assertNull(bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.MST));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getRetiringFederatorBtcPublicKey(0));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.BTC));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.RSK));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getRetiringFederatorPublicKeyOfType(0, FederationMember.KeyType.MST));
     }
 
     @Test
@@ -2468,7 +2462,7 @@ public class BridgeSupportIT {
         // New federation should be active in this block
         when(mockedBlock.getNumber()).thenReturn(25L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null, mockedOldFederation,
@@ -2504,19 +2498,19 @@ public class BridgeSupportIT {
 
     @Test
     void getPendingFederationMethods_none() {
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, null, null, null);
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, null, null, null);
 
         assertEquals(-1, bridgeSupport.getPendingFederationSize().intValue());
-        assertNull(bridgeSupport.getPendingFederatorBtcPublicKey(0));
-        assertNull(bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.BTC));
-        assertNull(bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.RSK));
-        assertNull(bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.MST));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getPendingFederatorBtcPublicKey(0));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.BTC));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.RSK));
+        assertEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.MST));
     }
 
     @Test
     void getPendingFederationMethods_present() {
         PendingFederation mockedPendingFederation = new PendingFederation(FederationTestUtils.getFederationMembers(5));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, mockedPendingFederation, null, null);
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, mockedPendingFederation, null, null);
 
         assertEquals(5, bridgeSupport.getPendingFederationSize().intValue());
         List<FederationMember> members = FederationTestUtils.getFederationMembers(5);
@@ -2542,7 +2536,7 @@ public class BridgeSupportIT {
 
     @Test
     void voteFederationChange_methodNotAllowed() {
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2560,7 +2554,7 @@ public class BridgeSupportIT {
 
     @Test
     void voteFederationChange_notAuthorized() {
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2637,7 +2631,7 @@ public class BridgeSupportIT {
     void createFederation_ok() {
         VotingMocksProvider mocksProvider = new VotingMocksProvider("create", new byte[][]{}, true);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2666,7 +2660,7 @@ public class BridgeSupportIT {
     void createFederation_pendingExists() {
         VotingMocksProvider mocksProvider = new VotingMocksProvider("create", new byte[][]{}, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2712,7 +2706,7 @@ public class BridgeSupportIT {
         // New federation should be waiting for activation in this block
         when(mockedBlock.getNumber()).thenReturn(19L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null,
@@ -2763,7 +2757,7 @@ public class BridgeSupportIT {
         // New federation should be active in this block
         when(mockedBlock.getNumber()).thenReturn(21L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null,
@@ -2793,7 +2787,7 @@ public class BridgeSupportIT {
         }, true);
 
         PendingFederation pendingFederation = new PendingFederation(Collections.emptyList());
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2843,7 +2837,7 @@ public class BridgeSupportIT {
         PendingFederation pendingFederation = new PendingFederation(FederationTestUtils.getFederationMembersWithKeys(Collections.singletonList(
             BtcECKey.fromPublicOnly(Hex.decode("031da807c71c2f303b7f409dd2605b297ac494a563be3b9ca5f52d95a43d183cc5"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2908,7 +2902,7 @@ public class BridgeSupportIT {
             Hex.decode("036bb9eab797eadc8b697f0e82a01d01cabbfaaca37e5bafc06fdc6fdd38af894a")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2935,7 +2929,7 @@ public class BridgeSupportIT {
         PendingFederation pendingFederation = new PendingFederation(FederationTestUtils.getFederationMembersWithKeys(Collections.singletonList(
             BtcECKey.fromPublicOnly(Hex.decode("031da807c71c2f303b7f409dd2605b297ac494a563be3b9ca5f52d95a43d183cc5"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2959,7 +2953,7 @@ public class BridgeSupportIT {
             Hex.decode("aabbccdd")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2986,7 +2980,7 @@ public class BridgeSupportIT {
         }, true);
 
         PendingFederation pendingFederation = new PendingFederation(Collections.emptyList());
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3036,7 +3030,7 @@ public class BridgeSupportIT {
             ECKey.fromPublicOnly(Hex.decode("02a23343f50363dc9a4c29f0c0a8386780cc8bf469211f4de51d50f8c0f274e9a7")),
             ECKey.fromPublicOnly(Hex.decode("030dd584c286275ab2ce249096d0d7e6c78853e0902db061b14f2e39df068f95bc"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3095,7 +3089,7 @@ public class BridgeSupportIT {
             Hex.decode("0304d9178db5e243667824188f86f7507104d0e237838bfb22bb4af592a8bca08a")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3126,7 +3120,7 @@ public class BridgeSupportIT {
             ECKey.fromPublicOnly(Hex.decode("03981d06bd7bc419612aa09f860188f08d3c3010796dcb41cdfc43a6875600efa8")),
             ECKey.fromPublicOnly(Hex.decode("0365e45f68d6347aaa03c76f3d6f47000df6090801e49eef6d49f547f5c19de5dd"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3157,7 +3151,7 @@ public class BridgeSupportIT {
             ECKey.fromPublicOnly(Hex.decode("02cf0dec68ca34502e4ebd35c40a0e66ff47ba520f0418bcd7388717b12ab4b053")),
             ECKey.fromPublicOnly(Hex.decode("0365e45f68d6347aaa03c76f3d6f47000df6090801e49eef6d49f547f5c19de5dd"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3188,7 +3182,7 @@ public class BridgeSupportIT {
             ECKey.fromPublicOnly(Hex.decode("033174d2fb7a3d7a0c87d43fa3e9ba43d4962014960b82bcd793706c05f68111c8")),
             ECKey.fromPublicOnly(Hex.decode("031da807c71c2f303b7f409dd2605b297ac494a563be3b9ca5f52d95a43d183cc5"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3214,7 +3208,7 @@ public class BridgeSupportIT {
             Hex.decode("029664581b2e8dc9ba7885696a03134aaebe4be834ce0049d62f80499bbe130206")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3240,7 +3234,7 @@ public class BridgeSupportIT {
             Hex.decode("029664581b2e8dc9ba7885696a03134aaebe4be834ce0049d62f80499bbe130206")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3266,7 +3260,7 @@ public class BridgeSupportIT {
             Hex.decode("aabbccdd")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3292,7 +3286,7 @@ public class BridgeSupportIT {
             BtcECKey.fromPublicOnly(Hex.decode("036bb9eab797eadc8b697f0e82a01d01cabbfaaca37e5bafc06fdc6fdd38af894a")),
             BtcECKey.fromPublicOnly(Hex.decode("031da807c71c2f303b7f409dd2605b297ac494a563be3b9ca5f52d95a43d183cc5"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3321,7 +3315,7 @@ public class BridgeSupportIT {
     void rollbackFederation_noPendingFederation() {
         VotingMocksProvider mocksProvider = new VotingMocksProvider("rollback", new byte[][]{}, true);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3395,7 +3389,7 @@ public class BridgeSupportIT {
         when(federationStorageProvider.getPendingFederation()).thenReturn(pendingFederation);
         when(federationStorageProvider.getFederationElection(any())).thenReturn(mocksProvider.getElection());
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             federationStorageProvider,
             newFederation,
             pendingFederation,
@@ -3454,7 +3448,7 @@ public class BridgeSupportIT {
         VotingMocksProvider mocksProvider = new VotingMocksProvider("commit", new byte[][]{
             new Keccak256(HashUtil.keccak256(Hex.decode("aabbcc"))).getBytes()
         }, true);
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3482,7 +3476,7 @@ public class BridgeSupportIT {
             new Keccak256(HashUtil.keccak256(Hex.decode("aabbcc"))).getBytes()
         }, true);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3513,7 +3507,7 @@ public class BridgeSupportIT {
             true
         );
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3546,7 +3540,7 @@ public class BridgeSupportIT {
             expectedFederationArgs
         );
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             expectedFederation,
             null,
@@ -3603,7 +3597,7 @@ public class BridgeSupportIT {
         Block mockedBlock = mock(Block.class);
         when(mockedBlock.getNumber()).thenReturn(25L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null,
@@ -3638,7 +3632,7 @@ public class BridgeSupportIT {
         Repository repository = createRepository();
         BtcBlockStoreWithCache.Factory btcBlockStoreFactory = new RepositoryBtcBlockStoreWithCache.Factory(
             bridgeRegTestConstants.getBtcParams());
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(null)
             .withRepository(repository)
@@ -3674,7 +3668,7 @@ public class BridgeSupportIT {
             bridgeRegTestConstants.getBtcParams(),
             activationsBeforeForks
         );
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3718,7 +3712,7 @@ public class BridgeSupportIT {
 
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3762,7 +3756,7 @@ public class BridgeSupportIT {
 
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3806,7 +3800,7 @@ public class BridgeSupportIT {
 
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3850,7 +3844,7 @@ public class BridgeSupportIT {
 
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3895,7 +3889,7 @@ public class BridgeSupportIT {
         when(mockFactory.newInstance(track, bridgeRegTestConstants, provider, activations)).thenReturn(btcBlockStore);
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3937,7 +3931,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(track, bridgeRegTestConstants, provider, activations)).thenReturn(btcBlockStore);
 
-        BridgeSupport bridgeSupport =
+        bridgeSupport =
             bridgeSupportBuilder
                 .withBridgeConstants(bridgeRegTestConstants)
                 .withProvider(provider)
@@ -3970,7 +3964,7 @@ public class BridgeSupportIT {
 
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -4000,7 +3994,7 @@ public class BridgeSupportIT {
 
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -4031,7 +4025,7 @@ public class BridgeSupportIT {
 
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -4068,7 +4062,7 @@ public class BridgeSupportIT {
             .withFederationConstants(federationConstants)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
